# cifras

./: .gitignore  CIFRAS.BAK  CIFRAS.C  CIFRAS.C.2  CIFRAS.C.old  CIFRAS.DSK  CIFRAS.GDT  CIFRAS.GPR  CIFRAS.PRJ  CMakeLists.txt  Cifras.dev  Makefile  Makefile.win  README.md  cifras.mk  cifras.project  cifras.sln  cifras.txt  shell_cifras.html
NetCore/: Cifras.sln
NetCore/Cifra.Console/: Program.cs
NetCore/Cifras.Core/: Class1.cs  EJugadores.cs  ETipoEnunciado.cs  Enunciado.cs
NetCore/Cifras.Core/Extensions/: LinqExtensions.cs
NetCore/Cifras.Core/Generador/: GeneradorEnunciadoTVE.cs  IGeneradorEnunciado.cs  IGeneradorEnunciadoElegirGrupo.cs
NetCore/Cifras.Core/Util/: HelperLinq.cs  RandomRNG.cs
NetCore/Cifras.Text/: Cifras.Test.csproj  Program.cs
NetCore/CifrasBlazorApp/: CifrasBlazorApp.csproj  Program.cs  _Imports.razor
NetCore/CifrasBlazorApp/Pages/: Index.razor
NetCore/CifrasBlazorApp/Properties/: launchSettings.json
NetCore/CifrasBlazorApp/Shared/: NavMenu.razor
NetCore/CifrasBlazorApp/wwwroot/: index.html
NetCore/CifrasBlazorApp/wwwroot/css/: site.css
cifras.1.0/: CIFRAS.C  CIFRAS.GPR
cifras.2.0/: CIFRAS.C  CIFRAS.C.old  CIFRAS.DSK  CIFRAS.GDT  CIFRAS.PRJ  Cifras.layout  Makefile.win  cifras.project  cifras.workspace
cifrasi/: cifrasi.vcxproj
cifrasr/: ReadMe.txt  cifras.cpp  cifrasrecursivo.vcxproj  cifrasrecursivo.vcxproj.filters
docs/: cifras.js  cifras.wasm  index.html  pthreads.js  pthreads.wasm
